teste mudar nome

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Alura_Java_JSF_I</name>
+	<name>Alura_Java_JSF</name>
 	<comment></comment>
 	<projects>
 	</projects>
