--- a/.classpath
+++ b/.classpath
@@ -13,5 +13,6 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/weld-servlet-2.3.2.Final.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
